--- a/wds_website/src/stylesheets/scss/_media1.scss
+++ b/wds_website/src/stylesheets/scss/_media1.scss
@@ -174,7 +174,17 @@
     font-size: 18px;
     margin-top: 15px;
     width: 85%;
-    margin-left: 13%;
+    margin-left: 5%;
+  }
+
+  .flex-layout-space-between { 
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    font-size: 18px;
+    margin-top: 75px;
+    width: 85%;
+    margin-left: 7%;
   }
 
   .cs-container { 
@@ -477,7 +487,7 @@
   }
 
   .margin-left-25 {
-    margin-left: 0%;
+    margin-left: 25%;
   }
 
   .margin-bottom-15 {
@@ -658,6 +668,10 @@
 
   .margin-top-75 {
     margin-top: 40px;
+  }
+
+  .margin-top-75sm {
+    margin-top: 75px;
   }
 
   .margin-left-75 {
@@ -1226,13 +1240,11 @@
  
   }
 
-  
-
                                                           /*****************************************768 break****************************************/
 
   
   // Medium devices (tablets, 768px and up)
-  @media only screen and (min-width:768px) and (max-width:10249px) { 
+  @media only screen and (min-width:768px) { 
 
 .width-70 {
   width: 60%;
@@ -1259,7 +1271,7 @@
   max-width: 650px;
   height: auto;
   border: 2px solid #000;
-  margin-left: 13%;
+  margin-left: 3%;
 }
 
 
@@ -1462,6 +1474,16 @@
     }
     
    }
+
+   @media only screen and (min-width:900px) { 
+    .container-photo-callout {
+      width: 100%;
+      max-width: 650px;
+      height: auto;
+      border: 2px solid #000;
+      margin-left: 9%;
+    }
+   }
   
   // Large devices (desktops, 1024px and up)
                                                     /*****************************************1024 break****************************************/
@@ -1613,6 +1635,56 @@
 
 .grid-left {
   grid-column: 1;
+}
+
+.grid-footer {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-areas: "text1 text2 text3 text4 text5";
+  grid-auto-flow: column;
+  width: 100%;
+}
+
+.grid-footer-item-1 {
+  grid-column: 1/5;
+  grid-row: 1/1;
+  grid-area: text1;
+}
+
+.grid-footer-item-2 {
+  grid-column: 2/5;
+  grid-row: 1/1;
+  grid-area: text2;
+ 
+}
+
+.grid-footer-item-3 {
+  grid-column: 3/5;
+  grid-row: 1/1;
+  grid-area: text3;
+  
+}
+
+.grid-footer-item-4 {
+  grid-column: 4/5;
+  grid-row: 1/1;
+  grid-area: text4;
+}
+
+.grid-footer-item-5 {
+  grid-column: 5/5;
+  grid-row: 1/1;
+  grid-area: text5;
+}
+
+.grid-why-list {
+  width: 1200px;
+  grid-template-columns: repeat(3, 400px);
+  grid-row: auto;
+  grid-gap: 20px;
+  display: grid;
+  margin-left: 0%;
 }
 
 .container-section-1-primary {
@@ -1877,7 +1949,17 @@
     font-size: 18px;
     margin-top: 15px;
     width: 85%;
-    margin-left: 15%;
+    margin-left: 13%;
+  }
+
+  .flex-layout-space-between { 
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    font-size: 18px;
+    margin-top: 75px;
+    width: 85%;
+    margin-left: 7%;
   }
 
   .why-item {
@@ -2050,6 +2132,10 @@
 
   .margin-right-50 {
     margin-right: 0%;
+  }
+
+  .margin-top-75sm {
+    margin-top: 0px
   }
 
   .margin-right-50sm {
