--- a/wds_website/src/stylesheets/scss/helper-classes.scss
+++ b/wds_website/src/stylesheets/scss/helper-classes.scss
@@ -372,6 +372,10 @@
     margin-top: 0%;
   }
 
+  .margin-top-75sm {
+    margin-top: 0px
+  }
+
   .margin-top-min25sm {
     margin-top: 0px;
   }
@@ -1108,6 +1112,10 @@
     
     .margin-top-10 {
       margin-top: 10px;
+    }
+
+    .margin-top-min10 {
+      margin-top: -14px
     }
 
     .margin-top-15 {
